# fastapi-sqlalchemy

./: .gitignore  README.md  alembic.ini  db.sqlite3  pyproject.toml
api/: definitions.py  schema.py
app/: main.py
app/alembic/: env.py
app/alembic/versions/: bea5e58f3328_add_data.py
app/crud/: __init__.py  crud_directors.py  crud_movies.py
app/db/: base.py
app/models/: __init__.py  director.py  movie.py
app/schema/: __init__.py  director.py  input.py  movie.py  schema.py
crud/: crud_directors.py  crud_movies.py
main/: __init__.py  database.py  models.py
